# meadow-scribe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: convert.yml
src/meadow/: __init__.py  cli.py  converter.py  extractor.py  template.py
tests/: test_meadow.py
